# email-cli

./: .gitignore  AGENTS.md  README.md  email  pyproject.toml
email_cli/: __init__.py  client.py  config.py  crypto.py  formatter.py  main.py  models.py  notes.py  utils.py
tests/: conftest.py  test_config.py  test_utils.py
