[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-cli"
version = "0.1.0"
description = "A multi-account email CLI supporting IMAP/SMTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
email = "email_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["email_cli*"]
